# app/Http/Requests/RegisterUserRequest.php
@@ -25,12 +25,13 @@ class RegisterUserRequest extends FormRequest
      * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
      */
 
-    //  protected function prepareForValidation()
-    //  {
-    //      $this->merge([
-    //          'password' => Hash::make($this->input('password')),
-    //      ]);
-    //  }
+     protected function prepareForValidation()
+     {
+         $this->merge([
+             'password' => Hash::make($this->input('password')),
+             'status' => 'user'
+         ]);
+     }
 
     public function rules(): array
     {
@@ -40,8 +41,10 @@ class RegisterUserRequest extends FormRequest
             'residence' => ['required','string'],
             'password' => ['required', 'string'],
             'email' => ['required', 'email', 'unique:users,email', ],
-            'profilePicture' => ['string'],
+            'profilePicture' => ['string', 'nullable'],  
             'levelOfStudy' => ['required', 'string'],
+            'status' => ['required', 'string'],
+
         ];
 
     }
@@ -49,12 +52,19 @@ class RegisterUserRequest extends FormRequest
 
     public function failedValidation(Validator $validator)
     {
+        $statusCode = 422; // Default status code
+
+        // Check for specific validation errors and set status code accordingly
+        if ($validator->errors()->has('email') && $validator->errors()->first('email') === 'The email has already been taken.') {
+            $statusCode = 409; // Conflict status code for duplicate email
+        }
+
         throw new HttpResponseException(response()->json([
             'success' => false,
             'error' => true,
             'message' => 'Erreur de validation',
             'errorsList' => $validator->errors()
-        ]));
+        ], $statusCode));
     }
 
 
